# inherited-glyphs-converter

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README_en.md  README_sc.md  README_zh-sc.md  README_zh-tc.md  __main__.py  inheritedglyphs.py  pyproject.toml  variants-compatibility-k.txt  variants-scs.txt  variants.txt  web_app.py
conversion-tables/: compatibility_corrected_mapping.txt  inherited_variants.txt  inherited_variants_supp_planes.txt  ivs-adobe-japan1.txt  ivs-moji-joho.txt  j-compatibility_variants.txt  k-compatibility_variants.txt  radicals.txt  t-compatibility_variants.txt  t-compatibility_variants_core.txt  unifiable_variants.txt  unifiable_variants_supp_core.txt  unifiable_variants_supp_planes.txt  variants_list.txt
inheritedglyphs/: __init__.py  __main__.py  cli.py  inheritedglyphs.py
inheritedglyphs/conversion-tables/: compatibility_corrected_mapping.txt  ivs-adobe-japan1.txt  ivs-mscs.txt
templates/: index.html
