[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inheritedglyphs"
version = "2.0-1"
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
authors = [
  {name = "Hayden Wong"}
]
keywords = ["inheritedglyphs"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.scripts]
inheritedglyphs = "inheritedglyphs.__main__:main"

[project.optional-dependencies]
chardet = ["chardet"]

[project.urls]
Homepage = "https://github.com/haydenwong7bm/inherited-glyphs-converter"
Documentation = "https://github.com/haydenwong7bm/inherited-glyphs-converter"
Source = "https://github.com/haydenwong7bm/inherited-glyphs-converter"
Tracker = "https://github.com/haydenwong7bm/inherited-glyphs-converter/issues"